--- a/README
+++ b/README
@@ -1,4 +1,4 @@
 Chain
 
 Image viewer with the ability to move through all supported images files in a directory.
-It also provides organising and renaming functions.
+It also provides organising and renaming functions. You can copy, move or replace files.
